--- a/index.html
+++ b/index.html
@@ -488,8 +488,8 @@
       <p>Copyrigts &copy; 2020 Omnifood. All rights reserved.</p>
     </div>
   </footer>
-  <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script type="module" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"></script>
   <script src="vendors/js/jquery.waypoints.min.js"></script>
   <script src="resources/js/script.js"></script>
 </body>
